Add Web Worker for heavy calculations and optimize game logic

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,6 +28,10 @@
                 <p>Координаты Волка: <span id="wolfCoords">0.000000, 0.000000</span></p>
                 <p>Расстояние: <span id="distance">0.000000</span></p>
             </div>
+            <div class="info-group">
+                <label>Количество шагов:</label>
+                <span id="stepsTaken">Steps taken: 0</span>
+            </div>
         </div>
     </div>
     <script src="main.js"></script>
